--- a/MyFlatWPF/MainWindow.xaml
+++ b/MyFlatWPF/MainWindow.xaml
@@ -6,195 +6,168 @@
         xmlns:local="clr-namespace:MyFlatWPF"
         xmlns:help="clr-namespace:MyFlatWPF.HelpMethods"
         mc:Ignorable="d"
-        Title="MyFlat Login" 
-        Height="360"
-        MinHeight="360"
-        MaxHeight="360"
-        Width="500"
-        MinWidth="500"
-        MaxWidth="500"
-        Background="LightSkyBlue"
-        WindowStartupLocation="CenterScreen"
-        Loaded="MainWindow_Loaded">
-    
+        Title="MyFlat" 
+        Height="600"
+        MinHeight="600"
+        Width="640"
+        MinWidth="640"
+        WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
-        <!--<viewModel:MainWindowViewModel x:Key="MainWindowViewModel"/>-->
-        <help:MyMultiValueConverter x:Key="MultiValueConverter"/>
-
-        <Style x:Key="LogInLabel" TargetType="{x:Type Label}">
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="HorizontalAlignment" Value="Right"/>
-        </Style>
-        <Style x:Key="LogInTextBox" TargetType="{x:Type TextBox}">
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Height" Value="37"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Margin" Value="0"/>
-            <Setter Property="Width" Value="230"/>
-
-        </Style>
-        <Style x:Key="LogInPasswordBox" TargetType="{x:Type PasswordBox}">
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Height" Value="37"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Margin" Value="0"/>
-            <Setter Property="Width" Value="230"/>
-        </Style>
-        <Style x:Key="LogInButton" TargetType="{x:Type Button}">
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Height" Value="33"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Background" Value="LightGreen"/>
-            <Setter Property="Cursor" Value="Hand"/>
-            <Setter Property="Padding" Value="0 0 0 5"/>
-        </Style>
-
-        <ControlTemplate x:Key="ValidationTemplate">
-            <DockPanel>
-                <TextBlock Foreground="Red" 
-                           FontSize="22"
-                           FontWeight="Bold"
-                           Padding="220,0,0,0"
-                           HorizontalAlignment="Right"><Run Text="!"/></TextBlock>
-
-            </DockPanel>
-        </ControlTemplate>
-
-        <Style x:Key="LabelInputError" TargetType="{x:Type Label}">
-            <Setter Property="VerticalAlignment" Value="Top"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="FontSize" Value="15"/>
-            <Setter Property="Width" Value="255"/>
-            <Setter Property="Height" Value="25"/>
-            <Setter Property="Margin" Value="0"/>
-            <Setter Property="Foreground" Value="Yellow"/>
-            <Setter Property="Padding" Value="0 0 0 5"/>
-        </Style>
-
-        <Style x:Key="TextBoxInError" TargetType="{x:Type TextBox}">
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Height" Value="37"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Margin" Value="0"/>
-            <Setter Property="Width" Value="230"/>
-        </Style>
-        <Style x:Key="PasswordBox" TargetType="{x:Type PasswordBox}">
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Height" Value="37"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Margin" Value="0"/>
-            <Setter Property="Width" Value="230"/>
-        </Style>
+        <!--<viewModel:PhoneBookWindowViewModel x:Key="PhoneBookWindowViewModel"/>-->
+        <help:MyMultiValueConverter x:Key="MyMultiValueConverter"/>
     </Window.Resources>
 
-    <Grid x:Name="gLogIn">
+    <Grid>
+
+        <Grid.Resources>
+
+            <Style x:Key="MenuItemStyle" TargetType="{x:Type MenuItem}">
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="Height" Value="22"/>
+                <!--<Setter Property="Margin" Value="2 0 0 4"/>-->
+                <Setter Property="Padding" Value="4 0 4 1"/>
+                <Setter Property="Background" Value="Transparent"/>
+            </Style>
+            
+            <Style x:Key="TextBlockStyle" TargetType="{x:Type TextBlock}">
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="Margin" Value="0"/>
+                <Setter Property="Background" Value="Transparent"/>
+            </Style>
+
+        </Grid.Resources>
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.7*"/>
-            <RowDefinition Height="0.25*"/>
-            <RowDefinition Height="0.5*"/>
-            <RowDefinition Height="0.25*"/>
-            <RowDefinition Height="0.5*"/>
-            <RowDefinition Height="0.4*"/>
-            <RowDefinition Height="0.7*"/>
+            <RowDefinition Height="8*"/>
+            <RowDefinition Height="140*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="410*" MinWidth="410"></ColumnDefinition>
+            <ColumnDefinition Width="210*" MinWidth="210"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <Label Content="Login form" 
-               Grid.ColumnSpan="2"
-               HorizontalAlignment="Center"
-               FontSize="25"
-               FontWeight="Bold"
-               Margin="0,20,0,0"
-               Padding="3"
-               VerticalAlignment="Top" 
-               Width="178"/>
-        <Label x:Name="lErrorEMailBox"
-               Grid.Row="1"
-               Grid.Column="1"
-               Style="{StaticResource LabelInputError}"/>
-               <!--Content="{Binding ErrorEMailBoxLabel, Source={StaticResource MainWindowViewModel}}"
-               BindingGroup="{Binding BindingGroupName=Parameters}"-->
-               
-        <Label Content="EMail"
-               Grid.Row="2"
-               Style="{StaticResource LogInLabel}" 
-               Width="77"/>
-        <Label Content="Password"
-               Grid.Row="4"
-               Style="{StaticResource LogInLabel}" 
-               Width="110"/>
-        <TextBox x:Name="tbEMail"
-                 Grid.Row="2"
-                 Grid.Column="1"
-                 Text=""
-                 Style="{StaticResource TextBoxInError}">
-            <!--<TextBox.Text>
-                    <Binding Path="UserName" Source="{StaticResource MainWindowViewModel}"
-                 UpdateSourceTrigger="PropertyChanged" >
-                        <Binding.ValidationRules>
-                            <help:ValidateTextBoxRule/>
-                        </Binding.ValidationRules>
-                    </Binding>
-                </TextBox.Text>-->
-        </TextBox>
-        <Label x:Name="lErrorPasswordBox"
-               Grid.Row="3"
-               Grid.Column="1"
-               Style="{StaticResource LabelInputError}"/>
-               <!--BindingGroup="{Binding BindingGroupName=Parameters}"
-               Content="{Binding ErrorPasswordBoxLabel, Source={StaticResource MainWindowViewModel}}"-->
-               
-        <PasswordBox x:Name="tbPassword"
-                         Grid.Row="4"
-                         Grid.Column="1"
-                         Style="{StaticResource PasswordBox}"
-                         FontSize="20"
-                         HorizontalAlignment="Left"/>
-        <Label x:Name="lErrorLogIn"
-               Grid.Row="5"
-               Grid.Column="1"
-               BindingGroup="{Binding BindingGroupName=Parameters}"
-               
-               VerticalAlignment="Top"
-               HorizontalAlignment="Left"
-               Width="265"
-               Height="45"
-               FontSize="15"
-               Foreground="Yellow"
-               Padding="0 0 0 5"
-               Margin="0"/>
-        <!--Content="{Binding CheckUserLabelContent, Source={StaticResource MainWindowViewModel}}"-->
+        <Menu x:Name="mTopLeft"
+              Grid.Row="0"
+              Height="24"
+              VerticalAlignment="Top"
+              HorizontalAlignment="Left"
+              FontSize="15"
+              Background="White">
 
-        <StackPanel
-            Grid.ColumnSpan="2"
-            Grid.Row="6"
-            Orientation="Horizontal">
-            <Button Content="Log in"
-                    Style="{StaticResource LogInButton}"
-                    Width="80"
-                    Margin="165,0,0,12">
-                    <!--Command="{Binding LogInCommand, Source={StaticResource MainWindowViewModel}}"-->
-                <Button.CommandParameter>
-                    <MultiBinding Converter="{StaticResource MultiValueConverter}">
-                        <Binding Path="Text" ElementName="tbEMail"/>
-                        <Binding ElementName="tbPassword"/>
-                    </MultiBinding>
-                </Button.CommandParameter>
-            </Button>
+                <MenuItem x:Name="miManagement"
+                          Header="Прочитать записи"
+                          Visibility="Collapsed"
+                          Cursor="Hand"
+                          Style="{StaticResource MenuItemStyle}"
+                          Margin="0 0 2 2">
+                    <!--Command="{Binding UpdateViewCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                          CommandParameter="{Binding Header, ElementName=miGetRecords}"-->
+                </MenuItem>
+                <MenuItem x:Name="miHome"
+                          Header="Home"
+                          Cursor="Hand"
+                          Style="{StaticResource MenuItemStyle}"
+                          Margin="0 0 2 2">
+                    <!--Command="{Binding UpdateViewCommand, Source={StaticResource PhoneBookWindowViewModel}}"
+                          CommandParameter="{Binding Header, ElementName=miGetDetails}"-->
+                </MenuItem>
+                <MenuItem x:Name="miProjects"
+                          Header="Projects"
+                          Cursor="Hand"
+                          Style="{StaticResource MenuItemStyle}"
+                          Margin="0 0 2 2">
+                    <!--Command="{Binding UpdateViewCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                          CommandParameter="{Binding Header, ElementName=miAddRecord}"-->
+                </MenuItem>
+                <MenuItem x:Name="miServices"
+                          Header="Services"
+                          Cursor="Hand"
+                          Style="{StaticResource MenuItemStyle}"
+                          Margin="0 0 2 2">
+                    <!--Command="{Binding UpdateViewCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                          CommandParameter="{Binding Header, ElementName=miChangeRecord}"-->
+                </MenuItem>
+            <MenuItem x:Name="miBlog"
+                          Header="Blog"
+                          Cursor="Hand"
+                          Style="{StaticResource MenuItemStyle}"
+                          Margin="0 0 2 2">
+                <!--Command="{Binding UpdateViewCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                          CommandParameter="{Binding Header, ElementName=miDeleteRecord}"-->
+            </MenuItem>
+            <MenuItem x:Name="miContacts"
+                          Header="Contacts"
+                          Cursor="Hand"
+                          Style="{StaticResource MenuItemStyle}"
+                          Margin="0 0 2 2">
+                <!--Command="{Binding UpdateViewCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                          CommandParameter="{Binding Header, ElementName=miDeleteRecord}"-->
+            </MenuItem>
+        </Menu>
 
-            <Button Content="Registration" 
-                    Margin="25,0,0,12" 
-                    Width="128" 
-                    Style="{StaticResource LogInButton}"
-                    />
-            <!--Command="{Binding RedirectRegistrationCommand, Source={StaticResource MainWindowViewModel}}" 
-                    CommandParameter="{Binding ElementName=window, Mode=OneWay}"-->
+        <Menu x:Name="mTopRight"
+              Grid.Column="1"
+              Height="24"
+              Width="auto"
+              VerticalAlignment="Top"
+              HorizontalAlignment="Right"
+              FontSize="15"
+              Background="White">
+
+            <MenuItem x:Name="miLogIn"
+                      Header="Login"
+                      Cursor="Hand"
+                      Margin="0 0 2 0">
+                <!--Command="{Binding OpenLogInWindowCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                      CommandParameter=""-->
+            </MenuItem>
+            <MenuItem x:Name="miRegister"
+                   Header="Register"
+                   Foreground="Black"
+                   Margin="0 0 2 0"
+                   Cursor="Hand">
+                <!--Command="{Binding OpenRegisterWindowCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                   CommandParameter=""-->
+            </MenuItem>
+
+            <MenuItem x:Name="miUserName"
+                   Visibility="Collapsed"
+                   Header=""
+                   Foreground="Coral"
+                   Cursor="Arrow"
+                   Margin="0 0 2 0">
+            </MenuItem>
+            <MenuItem x:Name="miLogOut"
+                      Visibility="Collapsed"
+                      Header="Logout"
+                      Cursor="Hand"
+                      Margin="0 0 2 0">
+                <!--Command="{Binding LogOutCommand, Source={StaticResource PhoneBookWindowViewModel}}"
+                      CommandParameter=""-->
+            </MenuItem>
+        </Menu>
+
+        <StackPanel Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    Background="LightSkyBlue">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="76*" MinWidth="400"></ColumnDefinition>
+                    <ColumnDefinition Width="324*"/>
+                    <ColumnDefinition Width="29*"/>
+                    <ColumnDefinition Width="205*" MinWidth="205"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <ContentControl x:Name="ccLeftPartPage" Grid.ColumnSpan="4" Margin="0,0,204.6,0">
+                    <!--Content="{Binding LeftCurrentView, Source={StaticResource PhoneBookWindowViewModel}, UpdateSourceTrigger=PropertyChanged}"-->
+                </ContentControl>
+                <ContentControl x:Name="ccRightPartPage"
+                            Grid.Column="3" Margin="349.2,0,-144.4,0">
+                    <!--Content="{Binding RightCurrentView, Source={StaticResource PhoneBookWindowViewModel}, UpdateSourceTrigger=PropertyChanged}"-->
+
+                </ContentControl>
+            </Grid>
         </StackPanel>
-
     </Grid>
 </Window>
